Add ChineseColors and Fix some mod mixin compatibility